<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:layout_gravity="center"
        android:textColor="@color/purple_700"
        android:textSize="32sp"
        />

    <EditText
        android:id="@+id/etEquation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_request"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requestLabel"
        android:onClick="valueRequestClick" />

    <Button
        android:id="@+id/btnDer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jsonLabel"
        android:onClick="derivativeRequestClick" />


</LinearLayout>